@@ -1480,11 +1480,11 @@ class detach_process_context_TestCase(scaffold.TestCase):
         test_pids_iter = iter([fork_error])
 
         def mock_fork():
-            next = test_pids_iter.next()
-            if isinstance(next, Exception):
-                raise next
+            next_item = test_pids_iter.next()
+            if isinstance(next_item, Exception):
+                raise next_item
             else:
-                return next
+                return next_item
 
         scaffold.mock(
             "os.fork",
@@ -1534,11 +1534,11 @@ class detach_process_context_TestCase(scaffold.TestCase):
         test_pids_iter = iter([0, fork_error])
 
         def mock_fork():
-            next = test_pids_iter.next()
-            if isinstance(next, Exception):
-                raise next
+            next_item = test_pids_iter.next()
+            if isinstance(next_item, Exception):
+                raise next_item
             else:
-                return next
+                return next_item
 
         scaffold.mock(
             "os.fork",
