@@ -15,7 +15,7 @@
 
 from __future__ import unicode_literals
 
-import __builtin__
+import __builtin__ as builtins
 import os
 import sys
 import tempfile
@@ -182,7 +182,7 @@ def setup_runner_fixtures(testcase):
         return result
 
     scaffold.mock(
-        "__builtin__.open",
+        "builtins.open",
         returns_func=mock_open,
         tracker=testcase.mock_tracker)
 
@@ -631,7 +631,7 @@ class DaemonRunner_do_action_stop_TestCase(scaffold.TestCase):
             raise self.failureException(
                 "Failed to raise " + expect_error.__name__)
         scaffold.mock_restore()
-        self.failUnlessIn(unicode(exc.message), expect_message_content)
+        self.failUnlessIn(unicode(exc), expect_message_content)
 
 
 class DaemonRunner_do_action_restart_TestCase(scaffold.TestCase):
